# Streamlit-Dividend-Dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app_config.py  data_processor.py  main.py  poetry-instruction.md  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml
.streamlit/: config.toml
app/: app_config.py  data_processor.py
app/components/: __init__.py  drip_calculator.py  nivo_pie_chart.py
app/config/: __init__.py  settings.py
app/styles/: __init__.py  colors_and_styles.py
app/utils/: __init__.py  color_manager.py  data_processor.py  dividend_calculator.py
components/: drip_calculator.py  nivo_pie_chart.py
data/: dividend_data.csv
docs/: poetry-instruction.md  troubleshooting.md
styles/: colors_and_styles.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: README.md  conftest.py  constants.py  test_accessibility.py  test_dashboard.py  test_drip_calculator.py  test_growth_calculator.py  test_responsive.py  test_ticker_filtering.py
tests/e2e/helpers/: parsing.py  streamlit.py
tests/e2e/pages/: __init__.py  base_section.py  dashboard_page.py  drip_section.py  growth_calculator.py
tests/integration/: __init__.py  test_color_generation_workflow.py  test_data_processing_workflow.py  test_dividend_calculation_workflow.py
tests/performance/: __init__.py  conftest.py  test_color_manager_perf.py  test_color_utils_perf.py  test_data_processor_perf.py  test_dividend_calculator_perf.py  test_performance.py  test_scale_perf.py
tests/property_based/: __init__.py  conftest.py  test_color_conversions.py  test_color_manager.py  test_color_wcag.py  test_dividend_calculator.py  test_property_based.py
tests/unit/: __init__.py  test_app_config.py  test_color_manager.py  test_data_processor.py  test_dividend_calculator.py  test_drip_calculator.py  test_error_handling.py  test_nivo_pie_chart.py  test_settings.py  test_utils_data_processor.py
utils/: color_manager.py  dividend_calculator.py
