[project]
name = "streamlit-dividend-dashboard"
version = "0.1.0"
description = "A Streamlit application for visualizing and analyzing stock dividend data."
authors = [
    {name = "s"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "streamlit>=1.51.0,<2.0.0",
    "plotly>=5.24.1,<6.0.0",
    "streamlit-elements>=0.1.0,<0.2.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3,<3.0.0"
streamlit = ">=1.51.0,<2.0.0"
plotly = ">=5.24.1,<6.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0,<9.0.0"
pytest-cov = ">=6.0.0,<7.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-xdist = ">=3.6.0,<4.0.0"
hypothesis = ">=6.120.0,<7.0.0"
freezegun = ">=1.5.0,<2.0.0"
pytest-benchmark = ">=5.0.0,<6.0.0"
mypy = ">=1.13.0,<2.0.0"
ruff = ">=0.8.0,<0.16.0"
pre-commit = ">=4.0.0,<5.0.0"

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade — enforce 3.12+ syntax
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode char in string (Polish text)
    "RUF002",  # ambiguous unicode char in docstring (Polish text)
    "RUF003",  # ambiguous unicode char in comment (Polish text)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT018"]  # allow assert in tests; composite assertions OK

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false   # incremental adoption

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
