[project]
name = "streamlit-dividend-dashboard"
version = "0.1.0"
description = "A Streamlit application for visualizing and analyzing stock dividend data."
authors = [
    {name = "s"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "streamlit>=1.55.0,<2.0.0",
    "plotly>=6.6.0,<7.0.0",
    "streamlit-elements>=0.1.0,<0.2.0",
    "pydantic-settings>=2.13.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.0.0,<3.0.0"
streamlit = ">=1.55.0,<2.0.0"
plotly = ">=6.6.0,<7.0.0"
streamlit-elements = ">=0.1.0,<0.2.0"
pydantic-settings = ">=2.13.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.0,<10.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-xdist = ">=3.6.0,<4.0.0"
pytest-timeout = ">=2.3.0,<3.0.0"
hypothesis = ">=6.120.0,<7.0.0"
freezegun = ">=1.5.0,<2.0.0"
pytest-benchmark = ">=5.0.0,<6.0.0"
mypy = ">=1.19.0,<2.0.0"
ruff = ">=0.15.5,<0.16.0"
pre-commit = ">=4.0.0,<5.0.0"
pip-audit = ">=2.7.0,<3.0.0"

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade — enforce 3.12+ syntax
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode char in string (Polish text)
    "RUF002",  # ambiguous unicode char in docstring (Polish text)
    "RUF003",  # ambiguous unicode char in comment (Polish text)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false   # incremental adoption

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ---------------------------------------------------------------------------
# Coverage — coverage.py configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
relative_files = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "__init__.py",
    "*/conftest.py",
    "app/styles/colors_and_styles.py",
]

[tool.coverage.report]
precision = 2
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Streamlit Dividend Dashboard - Coverage Report"
