[project]
name = "streamlit-dividend-dashboard"
version = "0.1.0"
description = "A Streamlit application for visualizing and analyzing stock dividend data."
authors = [
    {name = "s"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "streamlit-elements>=0.1.0,<0.2.0",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "tornado>=6.5.5",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^3.0.2"
streamlit = "^1.56.0"
plotly = "^6.7.0"
streamlit-elements = "^0.1.0"
pydantic-settings = "^2.14.0"
tornado = ">=6.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.3.0"
pytest-xdist = "^3.8.0"
pytest-timeout = "^2.4.0"
hypothesis = "^6.152.2"
pytest-benchmark = "^5.2.3"
mypy = "^2.0.0"
ruff = "^0.15.12"
pre-commit = "^4.6.0"
pip-audit = "^2.10.0"
playwright = "^1.58.0"
pytest-playwright = "^0.7.2"
axe-playwright-python = ">=0.1.7"
pytest-rerunfailures = "^16.1"
pytest-html = "^4.2.0"
time-machine = "^3.2.0"

# ---------------------------------------------------------------------------
# Ruff — linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade — enforce 3.12+ syntax
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",    # line too long — handled by formatter
    "RUF001",  # ambiguous unicode char in string (Polish text)
    "RUF002",  # ambiguous unicode char in docstring (Polish text)
    "RUF003",  # ambiguous unicode char in comment (Polish text)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests
"tests/e2e/**" = ["S101", "S310"]  # E2E: urllib.urlopen used for local server health check

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false   # incremental adoption

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ---------------------------------------------------------------------------
# Coverage — coverage.py configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
relative_files = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
    "__init__.py",
    "*/conftest.py",
    "app/styles/colors_and_styles.py",
]

[tool.coverage.report]
precision = 2
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Streamlit Dividend Dashboard - Coverage Report"
